--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script scr="script.js" defer></script>
 
             
-        <title>Sav's 2Q Portfolio</title>
+        <title>Sav's Portfolio</title>
         <link rel="icon" type="image/x-icon" href="../assets/alhaitham-chibi1.jpg">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -90,7 +90,31 @@
         <nav>
              <a href="./public/Unique_IceCream_Flavors.html" class="button"> First Graded Exercise </a>
              <a href ="./public/Q21NGBerylliumLaurio.html" class="button">First Non-Graded</a>
-
+        </nav>
+             <nav class="navbar">
+                <a href="#home">Home</a>
+                <div class="subnav">
+                    <button class="subnavbtn">2nd Qtr <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                        <!-- practice exercises for arrays -->
+                        <a href="./public/Unique_IceCream_Flavors.html" class="button"> First Graded Exercise </a>
+                        <a href ="./public/Q21NGBerylliumLaurio.html" class="button">First Non-Graded</a>
+                       </div>
+                </div>
+                <div class="subnav">
+                    <button class="subnavbtn">Third <i class="fa fa-caret-down"></i></button>
+                    <div class="subnav-content">
+                         <!-- VPL exercises for arrays/objects answers in onecompiler -->
+                        <a href="" target="_blank"> VPL NG 1 </a>
+                        <a href="" target="_blank"> VPL NG 2 </a>
+                        <!-- the graded exercises and projects -->
+                        <a href="" target="_blank"> 1st Graded </a>
+                        <a href=""> 2nd Graded </a>
+                    </div>
+                </div>
+                <a href="#">Fourth</a>
+            
+        </header>
             </button>
         </nav>
 
