--- a/index.html
+++ b/index.html
@@ -14,79 +14,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=VT323&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
 
-        <style>
-
-            body{
-             font-family : "VT323", monospace;
-             font-size: 20px;
-             margin: 20px;
-             font-weight: lighter;
-             text-align: center;
-            }
- 
-            body{
-             margin: 0;
-             height: 100vh;
-             background: linear-gradient(to top, #243330, #5D9582,  #C5EA8C, #E8E7A2);
-             background-size: 300% 300%;
-             animation: gradient 5s ease infinite; 
-            }
- 
-            .neonText{
-             font-size: 50px;
-             font-weight: bold;
-             animation: neonText 2s ease-in-out infinite alternate;
-     
-            }
- 
-            .button{
-             font-family : "VT323", monospace;
-             font-size: 16x;
-             padding: 10px 20px;
-             border:none;
-             background-color: #BAD5AC;
-             box-shadow:0 5px #243330;
-             border-radius: 8px;
-             cursor: pointer;
-             margin: 10px;
-             animation: button 0.3s ease-in-out;
-            }
- 
-               button:hover {
-                     background-color: #3BAEBE;
-                     transition:background-color 0.3s ease;
-               }
- 
-            @keyframes gradient{
-             0% {
-                 background-position: 0% 50%
-             }
-             50% {
-                 background-position: 100% 50%
-             }
-             100% {
-                 background-position: 0% 50%
-             }
-         }
- 
-         @keyframes neonText{
-             from {
-             text-shadow: 0 0 5px #E8E7A2, 0 0 10px #E8E7A2,  0 0 20px #E8E7A2, 0 0 40px #5D9582, 0 0 80px #5D9582;
-             }
-             to {
-             text-shadow:0 0 15px #E8E7A2, 0 0 20px #E8E7A2,  0 0 30px #5D9582, 0 0 50px #5D9582,  0 0 90px #5D9582;
-             }
-         }
- 
-         </style>
  
     </head>
     <body>
         <header>
-            <div>
-            <h1 style="color: #5D9582;" class ='neonText'>Welcome to my Portfolio!</h1>
-            </div>
              <nav class="navbar">
                 <a href="#home">Home</a>
                 <div class="subnav">
