--- a/index.html
+++ b/index.html
@@ -26,19 +26,17 @@
                     <button class="subnavbtn">2nd Qtr <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
                         <!-- practice exercises for arrays -->
-                        <a href="./public/Unique_IceCream_Flavors.html" target="_blank">> First Graded Exercise </a>
-                        <a href ="./public/Q21NGBerylliumLaurio.html" target="_blank">First Non-Graded</a>
+                        <a href="../public/Unique_IceCream_Flavors.html" target="_blank">> First Graded Exercise </a>
+                        <a href ="../public/Q21NGBerylliumLaurio.html" target="_blank">First Non-Graded</a>
                        </div>
                 </div>
                 <div class="subnav">
                     <button class="subnavbtn">Third <i class="fa fa-caret-down"></i></button>
                     <div class="subnav-content">
                          <!-- VPL exercises for arrays/objects answers in onecompiler -->
-                        <a href="" target="_blank"> VPL NG 1 </a>
-                        <a href="" target="_blank"> VPL NG 2 </a>
                         <!-- the graded exercises and projects -->
                         <a href="" target="_blank"> 1st Graded </a>
-                        <a href=""> 2nd Graded </a>
+                        <a href="../public/q3ge2Laurio.html"> 2nd Graded </a>
                     </div>
                 </div>
                 <a href="#">Fourth</a>
