--- a/public/q3/Q3_2GBerylliumLaurio.html
+++ b/public/q3/Q3_2GBerylliumLaurio.html
@@ -6,6 +6,8 @@
     <meta name="keywords" content="HTML Forms">
     <meta name="author" content="Sav Laurio">
     <title>Sample Form</title>
+
+    <link rel="stylesheet" href="q3ge2.css">
 </head>
 
 <body>
@@ -70,9 +72,15 @@
         </fieldset>
         <fieldset>
             <legend>Action Buttons</legend>
-            <button type="submit"> Accept </button>
-            <input type="cancel" value=" Clear " />
+            <button id="submit"> Accept </button>
+            <input type="reset" value=" Clear ">
+  
           </fieldset> 
+          <script>
+            const form = document.getElementById("dForm");
+
+
+          </script>
         </form>
     </section>
 </body>
