IM FREE IM FREE

--- a/public/q3/Q3_2GBerylliumLaurio.html
+++ b/public/q3/Q3_2GBerylliumLaurio.html
@@ -43,7 +43,7 @@
             <input onfocus="changeColor(this)" onblur="resetColor(this)"  type="text" name="phoneNo" id="phoneNo" required />
         </label><br/><br/>
         <label>Grade Level:
-            <select name="cluborg" id="cluborg" required >
+            <select name="gradeLevel" id="gradeLevel" required >
                 <option value="" disabled selected> Choose your grade level</option>
                 <option value="g7">Grade 7</option>
                 <option value="g8">Grade 8</option>
