--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     </head>
     <body>
         <header>
-            <div class="fadeInUp">
              <nav class="navbar">
                 <a href="#home">Home</a>
                 <div class="subnav">
@@ -37,7 +36,12 @@
                 </div>
                 <a href="#">Fourth</a>
                 </nav>
-            </div>
+                
+                <div class="box">
+                    <div class ="info">
+                        <p>under construction... :D </p>
+                    </div>
+                </div>
        
     </body>
 </html>
