--- a/public/q3/Q3_2GBerylliumLaurio.html
+++ b/public/q3/Q3_2GBerylliumLaurio.html
@@ -17,8 +17,9 @@
     </nav>
 
     <section>
+    
     <h1 class="title">Sign-up Page</h1>
-
+    <div class="box">
       <form id="dForm" method="get">
         <fieldset>
           <legend>Your Credentials</legend><br/>
@@ -78,10 +79,11 @@
             <button type="submit" id="submit">Accept</button>
             <input type="reset" value="Clear">
             <button type="button" id="viewForm" onclick="window.location.href='viewSignUps.html'">View Sign-ups</button>
-  
-          </fieldset> 
+          </fieldset>
+        
           <script src="q3ge2scr.js"></script>
         </form>
+      </div> 
     </section>
 </body>
 
