--- a/public/q3/viewSignUps.html
+++ b/public/q3/viewSignUps.html
@@ -23,9 +23,14 @@
 
     <body>
         <table></table>
+        <nav class ="navbar">
+            <a href="../../index.html">Home</a>
+            <a href="">Show Saved Accounts</a>
+        </nav>
 
         <section>
-            <h1>List of students who signed up</h1>
+            <div filterz>
+            <h2>List of students who signed up</h2>
 
              <label>Select your club</label>
                 <select id ="clubFilter" name="clubFilter" >
@@ -43,7 +48,9 @@
 
         </section>
 
-        <script src="viewSignUpsscr.js" defer></script>
+    </div>
+
+        <script src="viewSignUpsscr.js"></script>
     </body>
 </html>
 </DOCTYPE>
